--- a/Dweb/.obsidian/workspace
+++ b/Dweb/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Filecoin.md",
+            "file": "DWeb.md",
             "mode": "source"
           }
         }
@@ -84,7 +84,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Filecoin.md",
+                "file": "DWeb.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -104,9 +104,9 @@
   },
   "active": "672e2ec47d32fa0d",
   "lastOpenFiles": [
+    "DWeb.md",
     "Filecoin.md",
     "Startups.md",
-    "DWeb.md",
     "Humane Technology.md",
     "Untitled.md",
     "Twitter Bluesky.md",
